--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -6,10 +6,26 @@
     <title></title>
 </head>
 <body>
+<h1>Users Table</h1>
 <div>
-    <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
-    </th:block>
+    <a th:href="@{'/add/'}">Add new user</a>
+    <table border="1">
+        <tr>
+            <th>FirstName</th>
+            <th>LastNam</th>
+            <th>Email</th>
+            <th>Action</th>
+        </tr>
+        <tr th:each ="user  : ${users}">
+            <td th:utext="${user.getFirstName()}">...</td>
+            <td th:utext="${user.getLastName()}">...</td>
+            <td th:utext="${user.getEmail()}">...</td>
+            <td >
+                <a th:href="@{'/edit?id='+${user.getId()}}">Edit this item</a>
+                <a th:href="@{'/delete?id='+${user.getId()}}">Delete this item</a>
+            </td>
+        </tr>
+    </table>
 </div>
 </body>
 </html>
